Updated example for qtype1.

--- a/examples/qtype1/responses/1/responses-regular-survey-1.t1.html
+++ b/examples/qtype1/responses/1/responses-regular-survey-1.t1.html
@@ -1,24 +1,24 @@
 {
   "ResultCount": 1,
-  "HappenedAt": 1730899234575,
+  "HappenedAt": 1740832545376,
   "Data": [
     {
-      "s1-q18-choice": "background_diabetic_retinopathy",
-      "s1-q18-certainty": 4,
-      "s1-q25-choice": "background_diabetic_retinopathy",
-      "s1-q25-certainty": 5,
-      "s1-q24-choice": "background_diabetic_retinopathy",
-      "s1-q24-certainty": 5,
-      "s1-q31-choice": "background_diabetic_retinopathy",
-      "s1-q31-certainty": 4,
-      "s1-q1-choice": "background_diabetic_retinopathy",
-      "s1-q1-certainty": 5,
-      "s1-q27-choice": "background_diabetic_retinopathy",
-      "s1-q27-certainty": 4,
-      "s1-q4-choice": "background_diabetic_retinopathy",
-      "s1-q4-certainty": 5,
-      "s1-q14-choice": "background_diabetic_retinopathy",
-      "s1-q14-certainty": 4
+      "s1-q6-choice": "not_applicable",
+      "s1-q6-certainty": 4,
+      "s1-q8-choice": "none",
+      "s1-q8-certainty": 5,
+      "s1-q26-choice": "background_diabetic_retinopathy",
+      "s1-q26-certainty": 2,
+      "s1-q7-choice": "not_applicable",
+      "s1-q7-certainty": 3,
+      "s1-q20-choice": "none",
+      "s1-q20-certainty": 4,
+      "s1-q12-choice": "background_diabetic_retinopathy",
+      "s1-q12-certainty": 1,
+      "s1-q17-choice": "none",
+      "s1-q17-certainty": 5,
+      "s1-q10-choice": "background_diabetic_retinopathy",
+      "s1-q10-certainty": 5
     }
   ]
 }
