--- a/examples/qtype1/responses/3/responses-regular-survey-2.t1.html
+++ b/examples/qtype1/responses/3/responses-regular-survey-2.t1.html
@@ -1,24 +1,24 @@
 {
   "ResultCount": 1,
-  "HappenedAt": 1730899261482,
+  "HappenedAt": 1740832706742,
   "Data": [
     {
-      "s2-q17-choice": "none",
-      "s2-q17-certainty": 3,
-      "s2-q32-choice": "none",
-      "s2-q32-certainty": 4,
-      "s2-q2-choice": "none",
-      "s2-q2-certainty": 5,
-      "s2-q6-choice": "none",
-      "s2-q6-certainty": 3,
-      "s2-q13-choice": "none",
-      "s2-q13-certainty": 4,
-      "s2-q7-choice": "none",
-      "s2-q7-certainty": 5,
-      "s2-q3-choice": "none",
-      "s2-q3-certainty": 3,
-      "s2-q11-choice": "none",
-      "s2-q11-certainty": 4
+      "s2-q9-choice": "background_diabetic_retinopathy",
+      "s2-q9-certainty": 1,
+      "s2-q11-choice": "not_applicable",
+      "s2-q11-certainty": 5,
+      "s2-q22-choice": "none",
+      "s2-q22-certainty": 4,
+      "s2-q24-choice": "none",
+      "s2-q24-certainty": 3,
+      "s2-q33-choice": "background_diabetic_retinopathy",
+      "s2-q33-certainty": 5,
+      "s2-q29-choice": "not_applicable",
+      "s2-q29-certainty": 3,
+      "s2-q18-choice": "background_diabetic_retinopathy",
+      "s2-q18-certainty": 5,
+      "s2-q31-choice": "background_diabetic_retinopathy",
+      "s2-q31-certainty": 2
     }
   ]
 }
