--- a/examples/qtype1/responses/3/responses-control-survey-6.t1.html
+++ b/examples/qtype1/responses/3/responses-control-survey-6.t1.html
@@ -1,24 +1,24 @@
 {
   "ResultCount": 1,
-  "HappenedAt": 1730899290013,
+  "HappenedAt": 1740832926074,
   "Data": [
     {
-      "s6-q10-choice": "background_diabetic_retinopathy",
-      "s6-q10-certainty": 4,
-      "s6-q18-choice": "none",
-      "s6-q18-certainty": 5,
-      "s6-q28-choice": "background_diabetic_retinopathy",
-      "s6-q28-certainty": 4,
-      "s6-q6-choice": "none",
-      "s6-q6-certainty": 5,
-      "s6-q32-choice": "background_diabetic_retinopathy",
-      "s6-q32-certainty": 5,
-      "s6-q30-choice": "background_diabetic_retinopathy",
-      "s6-q30-certainty": 5,
-      "s6-q33-choice": "none",
-      "s6-q33-certainty": 4,
-      "s6-q17-choice": "background_diabetic_retinopathy",
-      "s6-q17-certainty": 3
+      "s6-q10-choice": "not_applicable",
+      "s6-q10-certainty": 2,
+      "s6-q33-choice": "background_diabetic_retinopathy",
+      "s6-q33-certainty": 5,
+      "s6-q8-choice": "not_applicable",
+      "s6-q8-certainty": 2,
+      "s6-q2-choice": "background_diabetic_retinopathy",
+      "s6-q2-certainty": 5,
+      "s6-q12-choice": "none",
+      "s6-q12-certainty": 5,
+      "s6-q21-choice": "not_applicable",
+      "s6-q21-certainty": 2,
+      "s6-q25-choice": "none",
+      "s6-q25-certainty": 4,
+      "s6-q28-choice": "not_applicable",
+      "s6-q28-certainty": 1
     }
   ]
 }
